# PassVault

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: FILE_FORMAT.md  THREAT_MODEL.md
notebooks/: copy_test.ipynb  stage_testing.ipynb
passvault_core/: __init__.py  cli.py  clipboard.py  crypto.py  errors.py  schema.py  storage.py  utils.py
passvault_core/tests/: test_cli.py  test_clipboard.py  test_crypto.py  test_schema.py  test_storage.py
passvault_gui/: __init__.py  clipboard.py  main.py  windows.py
passvault_tui/: __init__.py  app.py  main.py  style.css
passvault_tui/utils/: __init__.py
scripts/: check_env.sh  run_demo.sh  run_dev.sh  run_tui.sh
tests/: test_gui_placeholder.py
utils/: __init__.py  logger.py
