[project]
name = "passvault"
version = "0.1.0"
description = "A small local-first password manager for Linux (prototype)."
authors = ["Senume <>"]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"

[project.urls]
"homepage" = ""

[project.dependencies]
cryptography = "*"
argon2-cffi = "*"
appdirs = "*"
pytest = {optional = true}

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
